# hithere

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS.in  README  RELEASE  TAGS  build  configure  configure.ac  gnulib-sources  guix-autotools.scm  guix-git-fetch.scm.in  guix.scm  guix.scm.in  hithere.scm
Fn/: 00-sign-commit  c  m  n  v
autom4te.cache/: output.0  requests  traces.0  traces.1
b/: R8.sh
doc/: Makefile.am  Makefile.in  build-aux  guix-configure.ac  guix-m4  hithere.texi  hithere.texi.in
doc/release/: v0.0-rc1
docs/: index.html
examples/: te-rights-left.txt
here/: hithere.scm
lib/: .gitignore  Makefile.am  Makefile.in  TAGS  version-etc-gl.c
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
scripts/: 01-gitlog-to-changelog  02-release-base-tag  04-NEWS-disttag  05-tar-official  06-guix-sha256  NEWS-disttag  bootstrap  build  build-for-guix  distclean  git-branch-diff  gitlog-to-changelog  gittag-release  guix-sha256  install-guix  rights-left  sha256sum-dist  this-version  update-version-texi  upload-to-m2
src/: Makefile.am  Makefile.in  TAGS  hello.c
src/t/: 0005.t
